Made IO connection with ze defunct page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,5 +50,6 @@
         <item>missing</item>
         <item>software</item>
         <item>notype</item>
+        <item></item>
     </string-array>
 </resources>
