--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,21 +2,21 @@
     <string name="app_name">OrderHR_NonInstant</string>
 
     //all lesson start times
-    <string name="timeslot_one">08:30</string>
-    <string name="timeslot_two">09:20</string>
-    <string name="timeslot_three">10:30</string>
-    <string name="timeslot_four">11:20</string>
-    <string name="timeslot_five">12:10</string>
-    <string name="timeslot_six">13:00</string>
-    <string name="timeslot_seven">13:50</string>
-    <string name="timeslot_eight">15:00</string>
-    <string name="timeslot_nine">15:50</string>
-    <string name="timeslot_ten">17:00</string>
-    <string name="timeslot_eleven">17:50</string>
-    <string name="timeslot_twelve">18:40</string>
-    <string name="timeslot_thirteen">19:30</string>
-    <string name="timeslot_fourteen">20:20</string>
-    <string name="timeslot_fifteen">21:10</string>
+    <string name="timeslot_1">08:30</string>
+    <string name="timeslot_2">09:20</string>
+    <string name="timeslot_3">10:30</string>
+    <string name="timeslot_4">11:20</string>
+    <string name="timeslot_5">12:10</string>
+    <string name="timeslot_6">13:00</string>
+    <string name="timeslot_7">13:50</string>
+    <string name="timeslot_8">15:00</string>
+    <string name="timeslot_9">15:50</string>
+    <string name="timeslot_10">17:00</string>
+    <string name="timeslot_11">17:50</string>
+    <string name="timeslot_12">18:40</string>
+    <string name="timeslot_13">19:30</string>
+    <string name="timeslot_14">20:20</string>
+    <string name="timeslot_15">21:10</string>
 
     //the two pauses in our schedule
     <string name="pause_one">10:10</string>
